--- a/第02章 感知机/2.Perceptron.ipynb
+++ b/第02章 感知机/2.Perceptron.ipynb
@@ -287,7 +287,7 @@
    ],
    "source": [
     "x_points = np.linspace(4, 7, 10)\n",
-    "y_ = -(perceptron.w[0] * x_points + perceptron.b) / perceptron.w[1]\n",
+    "y_ = (perceptron.w[0] * x_points + perceptron.b) / perceptron.w[1]\n",
     "plt.plot(x_points, y_)\n",
     "\n",
     "plt.plot(data[:50, 0], data[:50, 1], 'bo', color='blue', label='0')\n",
